# tutor-assistant-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/observability/: alerts.yml  grafana-dashboard.json  otel-collector.yml  prometheus.yml  tempo.yml
deploy/observability/grafana-provisioning/dashboards/: tutor.yml
deploy/observability/grafana-provisioning/datasources/: prometheus.yml
deploy/production/: .env.production.example  Caddyfile.template  backup.sh  chaos-drill.sh  deploy.sh  init.sh  migration-check.sh  prometheus.yml  restore-drill.sh  rollback.sh  smoke.sh
docs/: ai-assistant-integration-plan.md  architecture.md  artifact-storage.md  durable-workers.md  materials-factory.md  materials-webhook.md  portal-delivery.md  post-lesson-automation.md  production-database.md  release-checklist.md  security-observability.md  slo.md
docs/runbooks/: backup-restore.md  deployment.md  incidents.md  rollback.md
load/: README.md  bbb-join.js  http.js  lesson-burst.js
schemas/: lesson-evidence-bundle-v1.schema.json
src/tutor_assistant_web/: __init__.py  app.py  artifact_operations.py  backup_operations.py  bbb.py  config.py  database_copy.py  db.py  load_operations.py  models.py  observability.py  operations.py  services.py  worker.py
src/tutor_assistant_web/bootstrap/: __init__.py  app_factory.py  container.py  registry.py  seed.py
src/tutor_assistant_web/migrations/: env.py
src/tutor_assistant_web/migrations/versions/: 0001_pilot_schema.py  0002_identity_tenancy.py  0003_workspace_administration.py  0004_post_lesson_automation.py  0005_materials_factory.py  0006_portal_delivery.py  0007_production_postgres.py  0008_durable_workers.py  0009_production_artifacts.py  0010_security_observability.py
src/tutor_assistant_web/modules/: __init__.py
src/tutor_assistant_web/modules/audit/: __init__.py  application.py  models.py  module.py  routes.py
src/tutor_assistant_web/modules/automation/: __init__.py  application.py  durability.py  models.py  module.py  routes.py
src/tutor_assistant_web/providers/: __init__.py  artifacts.py  conference.py  documents.py  materials.py  resilience.py  tasks.py  transcription.py
src/tutor_assistant_web/shared/: __init__.py  contracts.py  errors.py  middleware.py  models.py  security.py  web.py
src/tutor_assistant_web/static/: app.js  styles.css
src/tutor_assistant_web/templates/: accept_invitation.html  audit.html  base.html  dashboard.html  demo_room.html  error.html  finished.html  lesson_detail.html  login.html  portal.html  portal_delivery.html  schedule.html  student_detail.html  students.html  task_operations.html  team.html
tests/: test_architecture.py  test_artifact_storage.py  test_automation.py  test_bbb.py  test_database.py  test_durable_workers.py  test_identity_tenancy.py  test_materials_factory.py  test_minio_integration.py  test_portal.py  test_postgres_integration.py  test_production_release.py  test_redis_integration.py  test_security_observability.py  test_services.py  test_web.py  test_workspace_admin.py
tests/load/: seed_staging.py
(+36 files in other folders)
