[project]
name = "tutor-assistant-web"
version = "0.4.0"
description = "Fast pilot of a tutor workspace powered by BigBlueButton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "celery[redis]>=5.4,<6",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "pwdlib[argon2]>=0.3,<1",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
tutor-assistant-web = "tutor_assistant_web.app:run"
tutor-assistant-worker = "tutor_assistant_web.worker:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tutor_assistant_web"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
