[project]
name = "tutor-assistant-web"
version = "1.0.0"
description = "Fast pilot of a tutor workspace powered by BigBlueButton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "boto3>=1.35,<2",
  "celery[redis]>=5.4,<6",
  "defusedxml>=0.7.1,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "opentelemetry-exporter-otlp-proto-http>=1.30,<2",
  "opentelemetry-instrumentation-celery>=0.51b0,<1",
  "opentelemetry-instrumentation-fastapi>=0.51b0,<1",
  "opentelemetry-instrumentation-httpx>=0.51b0,<1",
  "opentelemetry-instrumentation-sqlalchemy>=0.51b0,<1",
  "opentelemetry-sdk>=1.30,<2",
  "prometheus-client>=0.21,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "PyJWT>=2.10,<3",
  "pwdlib[argon2]>=0.3,<1",
  "python-multipart>=0.0.20,<1",
  "redis>=5,<7",
  "sentry-sdk[fastapi]>=2.20,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
transcription = [
  "faster-whisper>=1.1,<2",
]
dev = [
  "bandit>=1.8,<2",
  "pip-audit>=2.8,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
tutor-assistant-web = "tutor_assistant_web.app:run"
tutor-assistant-worker = "tutor_assistant_web.worker:run"
tutor-assistant-db-copy = "tutor_assistant_web.database_copy:main"
tutor-assistant-ops = "tutor_assistant_web.operations:main"
tutor-assistant-artifacts = "tutor_assistant_web.artifact_operations:main"
tutor-assistant-backup = "tutor_assistant_web.backup_operations:main"
tutor-assistant-load-fixture = "tutor_assistant_web.load_operations:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tutor_assistant_web"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
